fixed dark mode hero shrinking on large quote

--- a/styles/404.css
+++ b/styles/404.css
@@ -5,11 +5,11 @@
     border: unset;
 } */
 
-.dark .stars, 
+/* .dark .stars, 
 .dark .twinkling, 
 .dark .night-clouds {
   height: 60rem;
-}
+} */
 
 #quote,
 .hero-quote-bio {
